--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dans-huang.github.io/Research/"
+baseURL = "https://dans-huang.github.io/Add-Lightness/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
