--- a/data/config.yaml
+++ b/data/config.yaml
@@ -25,3 +25,6 @@ page_title:
 links:
   - link_name: Twitter
     link: https://twitter.com/dans_huang
+favicon: |
+  <link rel="shortcut icon" href="icon.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">  
