--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,6 +1,6 @@
 name: Dans Huang
 enableToc: true
-openToc: true
+openToc: false
 enableLinkPreview: true
 enableLatex: true
 enableCodeBlockTitle: true
