--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
 ignoreFiles = [
+    "/content/templates/*",
     "/content/🔏/*",
     "/content/⚙/*",
     "/content/Readwise/*",
