--- a/config.toml
+++ b/config.toml
@@ -4,10 +4,7 @@ relativeURLs = false
 disablePathToLower = true
 ignoreFiles = [
     "/content/templates/*",
-    "/content/🔏/*",
-    "/content/⚙/*",
-    "/content/Readwise/*",
-    "/content/🗃/*",
+    "/content/private/*",
 ]
 summaryLength = 20
 paginate = 10
