--- a/content/Research/.obsidian/workspace
+++ b/content/Research/.obsidian/workspace
@@ -12,33 +12,129 @@
             {
               "leaf": "a46c0658bc6c94a8",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/道德的動物學基礎.md\",\"mode\":\"source\",\"source\":false}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"🗃/Conservatism/願景的衝突.md\",\"mode\":\"source\",\"source\":false}}",
               "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             },
             {
               "leaf": "a46c0658bc6c94a8",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/時間之於人類的角色.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{}"
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/馬爾薩斯、凱恩斯、馬克思、達爾文——近代人類觀點的主導者.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             },
             {
               "leaf": "a46c0658bc6c94a8",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/基督宗教中的神聖個人.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}},\"scroll\":0}"
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/論「紅藥丸」與男性的生命責任.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             },
             {
               "leaf": "a46c0658bc6c94a8",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/情境主義的警告.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":31,\"ch\":9},\"to\":{\"line\":31,\"ch\":9}},\"scroll\":9.871212121212121}"
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/誠實是社會參與的基石.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/被武器化的當代罪惡感.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/英國王室凸顯了「獨立於政治外的國家象徵」之重要性.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/耶穌作為理想人類的典範.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/秩序是靈魂的第一需要.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/神作為動詞.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/社會的價值階級.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/相愛不是結婚的充要條件.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/由自己組成的「跨期」社群.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/生命權（反墮胎）論點.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/理想是生命意義的前提.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/現代文明的存在無法不仰賴化石燃料.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/犧牲的信念.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/氣候運動家是對民主的一種侮辱.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/暴君的誕生.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/如何找到神？.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/檢驗證據與動機.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             }
           ]
         },
         "state": {
           "type": "markdown",
           "state": {
-            "file": "📝/道德的動物學基礎.md",
+            "file": "🗃/Conservatism/願景的衝突.md",
             "mode": "source",
             "source": false
           }
@@ -97,6 +193,10 @@
           {
             "id": "7412688da34fb3ec",
             "type": "leaf",
+            "pane-relief:history-v1": {
+              "pos": 0,
+              "stack": []
+            },
             "state": {
               "type": "tag",
               "state": {
@@ -125,7 +225,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "📝/道德的動物學基礎.md",
+                "file": "🗃/Conservatism/願景的衝突.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -142,7 +242,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "📝/道德的動物學基礎.md",
+                "file": "🗃/Conservatism/願景的衝突.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -154,7 +254,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "📝/道德的動物學基礎.md"
+                "file": "🗃/Conservatism/願景的衝突.md"
               }
             }
           }
@@ -179,17 +279,17 @@
     "width": 354.5,
     "collapsed": true
   },
-  "active": "a46c0658bc6c94a8",
+  "active": "aad3f85826ea091b",
   "lastOpenFiles": [
-    "📝/時間之於人類的角色.md",
-    "📝/道德的動物學基礎.md",
-    "📝/基督宗教中的神聖個人.md",
-    "📝/情境主義的警告.md",
-    "📝/個人德性受脈絡所定.md",
-    "📝/科技革新的法則.md",
-    "📝/對意義的渴望.md",
-    "📝/二階效用(2nd order effect).md",
-    "📝/「生命意義」問題的本質.md",
-    "📝/基督教的核心.md"
+    "📝/馬爾薩斯、凱恩斯、馬克思、達爾文——近代人類觀點的主導者.md",
+    "📝/論「紅藥丸」與男性的生命責任.md",
+    "📝/誠實是社會參與的基石.md",
+    "📝/被武器化的當代罪惡感.md",
+    "📝/英國王室凸顯了「獨立於政治外的國家象徵」之重要性.md",
+    "📝/耶穌作為理想人類的典範.md",
+    "📝/秩序是靈魂的第一需要.md",
+    "📝/神作為動詞.md",
+    "📝/社會的價值階級.md",
+    "📝/相愛不是結婚的充要條件.md"
   ]
 }
