--- a/content/Research/.obsidian/workspace
+++ b/content/Research/.obsidian/workspace
@@ -12,8 +12,26 @@
             {
               "leaf": "a46c0658bc6c94a8",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"🗃/Conservatism/願景的衝突.md\",\"mode\":\"source\",\"source\":false}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Adding Lightness.md\",\"mode\":\"source\",\"source\":false}}",
               "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/別把「沒有對方也活得下去」當成經營感情的核心價值.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/誰是「神」？.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"🗃/Conservatism/願景的衝突.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{}"
             },
             {
               "leaf": "a46c0658bc6c94a8",
@@ -110,31 +128,13 @@
               "group": null,
               "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/氣候運動家是對民主的一種侮辱.md\",\"mode\":\"source\",\"source\":false}}",
               "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/暴君的誕生.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/如何找到神？.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/檢驗證據與動機.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             }
           ]
         },
         "state": {
           "type": "markdown",
           "state": {
-            "file": "🗃/Conservatism/願景的衝突.md",
+            "file": "📝/Adding Lightness.md",
             "mode": "source",
             "source": false
           }
@@ -225,7 +225,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "🗃/Conservatism/願景的衝突.md",
+                "file": "📝/Adding Lightness.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -242,7 +242,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "🗃/Conservatism/願景的衝突.md",
+                "file": "📝/Adding Lightness.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -254,7 +254,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "🗃/Conservatism/願景的衝突.md"
+                "file": "📝/Adding Lightness.md"
               }
             }
           }
@@ -279,17 +279,17 @@
     "width": 354.5,
     "collapsed": true
   },
-  "active": "aad3f85826ea091b",
+  "active": "a46c0658bc6c94a8",
   "lastOpenFiles": [
+    "📝/別把「沒有對方也活得下去」當成經營感情的核心價值.md",
+    "📝/誰是「神」？.md",
+    "🗃/Conservatism/願景的衝突.md",
     "📝/馬爾薩斯、凱恩斯、馬克思、達爾文——近代人類觀點的主導者.md",
     "📝/論「紅藥丸」與男性的生命責任.md",
     "📝/誠實是社會參與的基石.md",
     "📝/被武器化的當代罪惡感.md",
     "📝/英國王室凸顯了「獨立於政治外的國家象徵」之重要性.md",
     "📝/耶穌作為理想人類的典範.md",
-    "📝/秩序是靈魂的第一需要.md",
-    "📝/神作為動詞.md",
-    "📝/社會的價值階級.md",
-    "📝/相愛不是結婚的充要條件.md"
+    "📝/秩序是靈魂的第一需要.md"
   ]
 }
