--- a/content/Research/.obsidian/workspace
+++ b/content/Research/.obsidian/workspace
@@ -12,8 +12,56 @@
             {
               "leaf": "a46c0658bc6c94a8",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Adding Lightness.md\",\"mode\":\"source\",\"source\":false}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Potential & identity.md\",\"mode\":\"source\",\"source\":false}}",
               "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Connecting Buddhism and Christianity.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Meditation on the materialization of the tech God.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/科技是形塑人類歷史的無形力量.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/The one argument (and why porn and suicide are wrong).md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Every ideal is a judge.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/The one argument (and why porn and suicide are wrong).md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Criticism on Feminism’s Basic Assumption.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+            },
+            {
+              "leaf": "a46c0658bc6c94a8",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Adding Lightness.md\",\"mode\":\"source\",\"source\":false}}",
+              "eState": "{}"
             },
             {
               "leaf": "a46c0658bc6c94a8",
@@ -80,61 +128,13 @@
               "group": null,
               "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/神作為動詞.md\",\"mode\":\"source\",\"source\":false}}",
               "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/社會的價值階級.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/相愛不是結婚的充要條件.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/由自己組成的「跨期」社群.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/生命權（反墮胎）論點.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/理想是生命意義的前提.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/現代文明的存在無法不仰賴化石燃料.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/犧牲的信念.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/氣候運動家是對民主的一種侮辱.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             }
           ]
         },
         "state": {
           "type": "markdown",
           "state": {
-            "file": "📝/Adding Lightness.md",
+            "file": "📝/Potential & identity.md",
             "mode": "source",
             "source": false
           }
@@ -225,7 +225,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "📝/Adding Lightness.md",
+                "file": "📝/Potential & identity.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -242,7 +242,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "📝/Adding Lightness.md",
+                "file": "📝/Potential & identity.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -254,7 +254,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "📝/Adding Lightness.md"
+                "file": "📝/Potential & identity.md"
               }
             }
           }
@@ -281,15 +281,15 @@
   },
   "active": "a46c0658bc6c94a8",
   "lastOpenFiles": [
+    "📝/Connecting Buddhism and Christianity.md",
+    "📝/Meditation on the materialization of the tech God.md",
+    "📝/科技是形塑人類歷史的無形力量.md",
+    "📝/The one argument (and why porn and suicide are wrong).md",
+    "📝/Every ideal is a judge.md",
+    "📝/Criticism on Feminism’s Basic Assumption.md",
+    "📝/Adding Lightness.md",
     "📝/別把「沒有對方也活得下去」當成經營感情的核心價值.md",
     "📝/誰是「神」？.md",
-    "🗃/Conservatism/願景的衝突.md",
-    "📝/馬爾薩斯、凱恩斯、馬克思、達爾文——近代人類觀點的主導者.md",
-    "📝/論「紅藥丸」與男性的生命責任.md",
-    "📝/誠實是社會參與的基石.md",
-    "📝/被武器化的當代罪惡感.md",
-    "📝/英國王室凸顯了「獨立於政治外的國家象徵」之重要性.md",
-    "📝/耶穌作為理想人類的典範.md",
-    "📝/秩序是靈魂的第一需要.md"
+    "🗃/Conservatism/願景的衝突.md"
   ]
 }
