--- a/content/Research/.obsidian/workspace
+++ b/content/Research/.obsidian/workspace
@@ -13,7 +13,7 @@
               "leaf": "a46c0658bc6c94a8",
               "group": null,
               "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Potential & identity.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
+              "eState": "{\"cursor\":{\"from\":{\"line\":6,\"ch\":45},\"to\":{\"line\":6,\"ch\":45}}}"
             },
             {
               "leaf": "a46c0658bc6c94a8",
@@ -185,6 +185,10 @@
           {
             "id": "b7a83113139c4bc2",
             "type": "leaf",
+            "pane-relief:history-v1": {
+              "pos": 0,
+              "stack": []
+            },
             "state": {
               "type": "file-explorer",
               "state": {}
@@ -279,7 +283,7 @@
     "width": 354.5,
     "collapsed": true
   },
-  "active": "a46c0658bc6c94a8",
+  "active": "aad3f85826ea091b",
   "lastOpenFiles": [
     "📝/Connecting Buddhism and Christianity.md",
     "📝/Meditation on the materialization of the tech God.md",
