--- a/content/Research/.obsidian/workspace
+++ b/content/Research/.obsidian/workspace
@@ -4,140 +4,22 @@
     "type": "split",
     "children": [
       {
-        "id": "a46c0658bc6c94a8",
+        "id": "9c46caea536dffaf",
         "type": "leaf",
         "pane-relief:history-v1": {
-          "pos": 1,
+          "pos": 0,
           "stack": [
             {
-              "leaf": "a46c0658bc6c94a8",
+              "leaf": "9c46caea536dffaf",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/道德的動物學基礎.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}},\"scroll\":0}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/社會的價值階級.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":49,\"ch\":4},\"to\":{\"line\":49,\"ch\":4}},\"scroll\":26.484848484848484}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Potential & identity.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":6,\"ch\":45},\"to\":{\"line\":6,\"ch\":45}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Connecting Buddhism and Christianity.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Meditation on the materialization of the tech God.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/科技是形塑人類歷史的無形力量.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/The one argument (and why porn and suicide are wrong).md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Every ideal is a judge.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/The one argument (and why porn and suicide are wrong).md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Criticism on Feminism’s Basic Assumption.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/Adding Lightness.md\",\"mode\":\"source\",\"source\":false}}",
+              "state": "{\"type\":\"empty\",\"state\":{}}",
               "eState": "{}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/別把「沒有對方也活得下去」當成經營感情的核心價值.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/誰是「神」？.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"🗃/Conservatism/願景的衝突.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/馬爾薩斯、凱恩斯、馬克思、達爾文——近代人類觀點的主導者.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/論「紅藥丸」與男性的生命責任.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/誠實是社會參與的基石.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/被武器化的當代罪惡感.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/英國王室凸顯了「獨立於政治外的國家象徵」之重要性.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "a46c0658bc6c94a8",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"📝/耶穌作為理想人類的典範.md\",\"mode\":\"source\",\"source\":false}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             }
           ]
         },
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "📝/社會的價值階級.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -161,7 +43,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "社會的價值階級",
+                "query": "tag:#✍🏼",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": true,
@@ -229,7 +111,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "📝/社會的價值階級.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -246,7 +127,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "📝/社會的價值階級.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -257,9 +137,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "📝/社會的價值階級.md"
-              }
+              "state": {}
             }
           }
         ]
@@ -283,17 +161,17 @@
     "width": 354.5,
     "collapsed": true
   },
-  "active": "a46c0658bc6c94a8",
+  "active": "9c46caea536dffaf",
   "lastOpenFiles": [
-    "📝/道德的動物學基礎.md",
+    "📝/科技是形塑人類歷史的無形力量.md",
+    "📝/人與世界的理想關係.md",
+    "📝/Standing the test of time.md",
     "📝/社會的價值階級.md",
+    "📝/道德的動物學基礎.md",
     "📝/Potential & identity.md",
     "📝/Connecting Buddhism and Christianity.md",
     "📝/Meditation on the materialization of the tech God.md",
-    "📝/科技是形塑人類歷史的無形力量.md",
     "📝/The one argument (and why porn and suicide are wrong).md",
-    "📝/Every ideal is a judge.md",
-    "📝/Criticism on Feminism’s Basic Assumption.md",
-    "📝/Adding Lightness.md"
+    "📝/Every ideal is a judge.md"
   ]
 }
