--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,15 @@
 baseURL = "https://dans-huang.github.io/Add-Lightness/"
 defaultContentLanguage = 'en'
 relativeURLs = false
-disablePathToLower = true
+disablePathToLower = false
 ignoreFiles = [
     "/content/templates/*",
+    "/content/private/*",
     "/content/private/*",
 ]
 summaryLength = 20
 paginate = 10
-enableGitInfo = true
+enableGitInfo = false
 
 [markup]
     [markup.tableOfContents]
