--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,7 +1,7 @@
 name: Dans Huang
 enableToc: false
 openToc: false
-enableLinkPreview: true
+enableLinkPreview: false
 enableLatex: true
 enableCodeBlockTitle: true
 enableCodeBlockCopy: true
