--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,10 @@ ignoreFiles = [
 ]
 summaryLength = 20
 paginate = 10
-enableGitInfo = false
+enableGitInfo = true
+
+[frontmatter]
+lastmod = [':git', ':fileModTime']
 
 [markup]
     [markup.tableOfContents]
