--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,9 @@ disablePathToLower = true
 ignoreFiles = [
     "/content/templates/*",
     "/content/private/*",
+    "/content/⚙️/*",
+    "/content/Readwise/*",
+    "/content/🗃/*",
 ]
 summaryLength = 20
 paginate = 10
