--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dans-huang.github.io/Add-Lightness/"
+baseURL = "https://dans-huang.github.io/Typographic-Man/"
 defaultContentLanguage = 'en'
 relativeURLs = false
 disablePathToLower = true
