--- a/data/config.yaml
+++ b/data/config.yaml
@@ -20,7 +20,7 @@ search:
 description:
   
 page_title:
-  "Typographic Man"
+  "The Typographic Man"
 links:
   - link_name: Twitter
     link: https://twitter.com/dans_huang
